<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoeFM</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title:</string>
    <string name="artist">Artist:</string>
    <string name="album">Album:</string>
    <string name="genre">Genre:</string>
    <string name="year">Year:</string>
    <string name="artworkDescription">Album artwork</string>
    <string name="file">File:</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>

</resources>
